Set status when creating item.
